Update ExcelToYamlConverter.java